--- a/client/.gitignore
+++ b/client/.gitignore
@@ -9,6 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
+.env
 
 # IntelliJ related
 *.iml
@@ -31,7 +32,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-
+*.env
 # Symbolication related
 app.*.symbols
 
