--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -5,6 +5,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
+
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -42,6 +43,7 @@ dependencies:
   event_bus: ^2.0.0
   fl_chart: ^0.55.0
   shared_preferences: ^2.0.15
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+  - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
