--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "node-rsa": "^1.1.1",
     "os-utils": "^0.0.14",
     "pm2": "^5.2.0",
     "systeminformation": "^5.12.6",
